--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Almost There website by Aleix Plademunt",
   "main": "index.js",
   "scripts": {
+    "build": "node build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
